--- a/front/css/style.css
+++ b/front/css/style.css
@@ -136,7 +136,7 @@ header .main-nav a {
 }
 
 .message-input .input {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: "Black Han Sans", sans-serif;
     font-weight: 500;
     font-size: 0.8vw;
     color: #fff;
